--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ html {
 #home {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 840px;
+    background-color: rgba(0, 0, 0, 0.0);
+    height: 700px;
     justify-content: center;
     align-items: center;
     color: white;
@@ -59,7 +59,7 @@ html {
     position: absolute;
     top: 0;
     right: 0;
-    background: url('img3.jpg.jpg') no-repeat center center/cover;
+    background: url('kamil.jpeg') no-repeat center center/cover;
     height: 2000px;
     width: 100%;
     z-index: -1;
@@ -87,7 +87,7 @@ html {
 .btn {
     padding: 10px 35px;
     background-color: transparent;
-    border: 1px solid white;
+    border: 2px solid white;
     color: white;
     outline: none;
     transition: .6s ease;
@@ -150,8 +150,8 @@ html {
 
 .gallery img {
     width: 340px;
-    height: 140px;
-    margin: 20px;
+    height: 240px;
+    margin: 40px;
 }
 
 /* Services Section */
